fix bug where in light mode text is drak and so it isnt very visible --> css set text col to white

--- a/conf/style.css
+++ b/conf/style.css
@@ -2,6 +2,10 @@ button {
     all: unset;
 }
 
+* {
+    color : #fff;
+}
+
 window {
     background: #00000000;
 }
